--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,3 +6,4 @@
       - "{{ ansible_os_family }}-{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
       - "{{ ansible_os_family }}-{{ ansible_distribution }}.yml"
       - "{{ ansible_os_family }}.yml"
+      - "{{ ansible_system }}.yml"
