Add root to apt/yum

--- a/tasks/CentOS.yml
+++ b/tasks/CentOS.yml
@@ -4,14 +4,16 @@
     name:
       - xorg-x11-drv-dummy # used with teamcity
       - xeyes # for testing
-      state: latest
-      use_backend: yum
+    state: latest
+    use_backend: yum
+  become: yes
 
   - name: Install Java - required by Team City agent
   yum:
     name: java-1.8.0-openjdk
     state: latest
     use_backend: yum
+  become: yes
 
 - name: Get the VM Hostname
   shell: hostname
@@ -36,7 +38,7 @@
     - "03"
     - "04"
   when: get_url_result.changed == True
-      
+
 #- name: "Put TeamCity Agent service file (systemd)"
 #  template:
 #    src: "teamcity-agent.service.j2"
@@ -55,12 +57,14 @@
     dest: /etc/init.d/teamcity
     mode: 0755
     force: no
+  become: yes
 
 - name: Automatic buildAgent Start - enable and start service
   service:
     name: teamcity
     enabled: yes
     state: started
+  become: yes
 
 - name: Create /home/<user>/builds directory
   file:
@@ -76,12 +80,14 @@
       - nfs-utils
     state: latest
     use_backend: yum
+  become: yes
     
 - name: Start the autofs service
   service:
     name: autofs
     enabled: yes
     state: started
+  become: yes
 
 - name: link /artefact to /net/unix-artefact/volume1/unix2/artefact
   file:
@@ -90,6 +96,7 @@
     owner: "{{ build_username }}"
     group: programmers
     state: link
+  become: yes
 
 - name: Write the Xdummy xorg.conf file
   copy:
@@ -98,6 +105,7 @@
     owner: root
     group: root
     mode: 0644
+  become: yes
 
 - name: Add cron job to start Xdummy on boot
   cron:
@@ -106,6 +114,7 @@
     job: "sleep 60 ; Xorg -noreset +extension GLX +extension RANDR +extension RENDER -config xdummy_xorg.conf :77 >/dev/null 2>&1"
     user: root
   register: xdummy_cron
+  become: yes
 
 # Ansible 2.7 includes a reboot module, move to that when possible. 
 - name: Reboot immediately if there was a change.
