--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,8 @@
 ---
-
   - name: Set up TeamCity agent
     include_tasks: "{{ item }}"
     with_first_found:
-      - "{{ ansible_os_family }}-{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
-      - "{{ ansible_os_family }}-{{ ansible_distribution }}.yml"
+      - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+      - "{{ ansible_distribution }}.yml"
       - "{{ ansible_os_family }}.yml"
       - "{{ ansible_system }}.yml"
