--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,10 @@
 ---
   - name: Set up TeamCity agent
-    include_tasks: "{{ item }}"
+    include_tasks: "{{ taskfile }}"
     with_first_found:
       - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
       - "{{ ansible_distribution }}.yml"
       - "{{ ansible_os_family }}.yml"
       - "{{ ansible_system }}.yml"
+    loop_control:
+      loop_var: taskfile
