--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,10 +1,5 @@
 ---
-local_buildagent_zip_path: /Users/{{ teamcity_agent_account }}/teamcity/buildagent-zip
-teamcity_agent_install_dir: /Users/{{ teamcity_agent_account }}/teamcity/buildagent
-teamcity_agent_server_hostname: ci01.ccdc.cam.ac.uk
-teamcity_agent_server_port: 80
-teamcity_agent_hostname: build-mac-10.14
-teamcity_agent_launchd_label: jetbrains.teamcity.BuildAgent
-teamcity_agent_launchd_filename: "/Users/{{ teamcity_agent_account }}/Library/LaunchAgents/jetbrains.teamcity.BuildAgent.plist"
-teamcity_agent_java_home_macos: /Library/Java/JavaVirtualMachines/adoptopenjdk-13.jdk/Contents/Home/
+teamcity_server_hostname: ci01.ccdc.cam.ac.uk
+teamcity_server_port: 80
+teamcity_agent_hostname: buildmachine
 artefact_upload_password: "{{ ansible_env.CCDC_ARTEFACT_PASSWORD }}"
