Update and simplify test vagrant files

--- a/test_vagrant_files/darwin/Vagrantfile
+++ b/test_vagrant_files/darwin/Vagrantfile
@@ -2,17 +2,18 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-    config.vm.define "vagrant-stage2-macosx-10.15"
-    config.vm.hostname = "buildlocal"
+    config.vm.define "tctest-macos"
+    config.vm.hostname = "tctest-macos"
+    
     config.vm.box = "ccdc-basebox/macosx-10.15"
     # Workaround for bug in artifactory not handling / in package names
     config.vm.box_url = "https://artifactory.ccdc.cam.ac.uk/api/vagrant/ccdc-vagrant-repo/ccdc-basebox%2Fmacosx-10.15"
 
-    config.vm.provider :vmware_desktop do |v, override|
+    config.vm.provider :vmware_fusion do |v, override|
         v.gui = true
+        v.vmx["memsize"] = "4096"
+        v.vmx["numvcpus"] = "4"
         v.vmx["ethernet0.virtualDev"] = "e1000e"
-        v.vmx["memsize"] = "12288"
-        v.vmx["numvcpus"] = "8"
     end
 
     config.vm.provision "ansible" do |ansible|
