--- a/test_vagrant_files/windows/Vagrantfile
+++ b/test_vagrant_files/windows/Vagrantfile
@@ -2,14 +2,20 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-    config.vm.define "vagrant-stage2-windows-2019-teamcity-agent"
+    config.vm.define "tctest-windows2019"
+    config.vm.hostname = "tctest-windows2019"
 
-    # Basic settings
-    config.vm.hostname = "tcagenttestwindows2019"
     config.vm.box = "ccdc-basebox/windows-2019"
     # Workaround for bug in artifactory not handling / in package names
     config.vm.box_url = "https://artifactory.ccdc.cam.ac.uk/api/vagrant/ccdc-vagrant-repo/ccdc-basebox%2Fwindows-2019"
 
+    config.vm.provider :virtualbox do |v, override|
+        v.gui = true
+        v.customize ["modifyvm", :id, "--memory", 4096]
+        v.customize ["modifyvm", :id, "--cpus", 4]
+        v.customize ["modifyvm", :id, "--clipboard-mode", "bidirectional"]
+        v.customize ["setextradata", "global", "GUI/SuppressMessages", "all" ]
+    end
     config.vm.provider :vmware_fusion do |v, override|
         v.gui = true
         v.vmx["memsize"] = "4096"
@@ -17,10 +23,7 @@ Vagrant.configure("2") do |config|
         v.enable_vmrun_ip_lookup = false
     end
 
-    # Apply stage 2 ansible roles
     config.vm.provision "ansible" do |ansible|
-      ansible.verbose = "v"
-
       # Set up WinRM for Ansible
       ansible.extra_vars = {
           ansible_connection: 'winrm',
